--- a/templates/show_samples.html
+++ b/templates/show_samples.html
@@ -29,6 +29,7 @@
                 <h2>&nbsp;</h2>
                 <p><strong>Aktivity: </strong>{{ sample.activities }}</p>
                 <p><strong>Adresa: </strong>{{ sample.address }}</p>
+                <p><strong>Členství: </strong>{{  sample.membership  }}</p>
             </div>
         </div>
         {% endfor %}
